--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,9 @@ const { title } = Astro.props as Props;
 	<body>
 		<slot />
 		<style>
+			@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+			@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap");
+			@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500&display=swap");
 			:root {
 				--font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
 				--font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
