--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import MissionStatement from "../components/MissionStatement.astro";
 import Ecwid from "../components/Ecwid.astro";
 import BupVideo from "../components/BupVideo.astro";
 import Brands from "../components/Brands.astro";
+import Features from "../components/Features.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -36,6 +37,7 @@ import Brands from "../components/Brands.astro";
     </section>
     <BupVideo />
     <Brands />
+    <Features />
 </Layout>
 <style>
     :root {
