--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+// import { Image } from "@astrojs/image/components";
 import FeatureImg1 from "../assets/featureImages/bup.png";
 import StreamyG from "../assets/featureImages/bup-streamy-g.png";
 import KeyP from "../assets/featureImages/keyp.png";
@@ -32,8 +32,8 @@ import ThreePugs from "../assets/featureImages/bup-three-little-pugs.png";
                 <div
                     class="feature-img-container max-w-[120px] md:max-w-[200px]"
                 >
-                    <Image
-                        src={FeatureImg1}
+                    <img
+                        src="../assets/featureImages/bup.png"
                         alt="bup"
                         class="w-full object-cover"
                     />
@@ -62,7 +62,10 @@ import ThreePugs from "../assets/featureImages/bup-three-little-pugs.png";
                 <div
                     class="feature-img-container max-w-[120px] md:max-w-[200px]"
                 >
-                    <Image src={StreamyG} alt="bup" class="w-full object-cover"
+                    <img
+                        src="../assets/featureImages/bup-streamy-g.png"
+                        alt="bup"
+                        class="w-full object-cover"
                     />
                 </div>
                 <p
@@ -89,7 +92,11 @@ import ThreePugs from "../assets/featureImages/bup-three-little-pugs.png";
                 <div
                     class="feature-img-container max-w-[120px] md:max-w-[200px]"
                 >
-                    <Image src={KeyP} alt="bup" class="w-full object-cover" />
+                    <img
+                        src="../assets/featureImages/keyp.png"
+                        alt="bup"
+                        class="w-full object-cover"
+                    />
                 </div>
                 <p
                     class="font-quicksand text-base text-center leading-relaxed tracking-wide"
@@ -115,7 +122,10 @@ import ThreePugs from "../assets/featureImages/bup-three-little-pugs.png";
                 <div
                     class="feature-img-container max-w-[120px] md:max-w-[200px]"
                 >
-                    <Image src={ThreePugs} alt="bup" class="w-full object-cover"
+                    <img
+                        src="../assets/featureImages/bup-three-little-pugs.png"
+                        alt="bup"
+                        class="w-full object-cover"
                     />
                 </div>
                 <p
