--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+// import { Image } from "@astrojs/image/components";
 import heroImg from "../assets/hero-mockup.webp";
 ---
 
@@ -89,8 +89,8 @@ import heroImg from "../assets/hero-mockup.webp";
         </div>
     </div>
 
-    <Image
-        src={heroImg}
+    <img
+        src="../assets/hero-mockup.webp"
         alt="bup phone mockup"
         class="hero-img w-48 sm:w-60 md:w-80 xl:w-[450px] drop-shadow-lg"
     />
