--- a/src/components/Brands.astro
+++ b/src/components/Brands.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+// import { Image } from "@astrojs/image/components";
 
 import bwim from "../assets/brandImages/bwim-logo.webp";
 import c21LogoOne from "../assets/brandImages/century-21-be3-logo.webp";
@@ -45,24 +45,29 @@ import UTLogo from "../assets/brandImages/ut-logo.webp";
     <div
         class="brand-img-container py-20 grid grid-cols-2 justify-items-center items-center gap-x-5 gap-y-20 lg:grid-cols-3 lg:gap-y-32 lg:gap-x-5"
     >
-        <Image class="w-6/12 md:w-40 object-cover cursor-pointer" src={bwim} />
-        <Image
+        <img
             class="w-6/12 md:w-40 object-cover cursor-pointer"
-            src={c21LogoOne}
+            src="../assets/brandImages/bwim-logo.webp"
         />
-        <Image
+        <img
             class="w-6/12 md:w-40 object-cover cursor-pointer"
-            src={c21LogoTwo}
+            src="../assets/brandImages/century-21-be3-logo.webp"
         />
-        <Image
+        <img
             class="w-6/12 md:w-40 object-cover cursor-pointer"
-            src={dwntwnSocial}
+            src="../assets/brandImages/century-21-be3.webp"
         />
-        <Image
+        <img
             class="w-6/12 md:w-40 object-cover cursor-pointer"
-            src={theSwitzerHychGroup}
+            src="../assets/brandImages/dwntwn-social.webp"
         />
-        <Image class="w-6/12 md:w-40 object-cover cursor-pointer" src={UTLogo}
+        <img
+            class="w-6/12 md:w-40 object-cover cursor-pointer"
+            src="../assets/brandImages/the-switzer-hych-group-logo.webp"
+        />
+        <img
+            class="w-6/12 md:w-40 object-cover cursor-pointer"
+            src="../assets/brandImages/ut-logo.webp"
         />
     </div>
 </section>
