--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Brands from "../components/Brands.astro";
 import Features from "../components/Features.astro";
 import Pricing from "../components/Pricing";
 import FAQ from "../components/FAQ";
+import Footer from "../components/Footer";
 ---
 
 <!-- "@astrojs/image": "^0.3.4", -->
@@ -40,6 +41,7 @@ import FAQ from "../components/FAQ";
     <Pricing client:load />
 
     <FAQ client:load />
+    <Footer client:load />
 </Layout>
 <style is:global>
     :root {
