--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -113,4 +113,10 @@ import Footer from "../components/Footer";
         transition: all 1s ease;
         opacity: 1;
     }
+
+    .icon {
+        background: -webkit-linear-gradient(#eee, #333);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
 </style>
