mission statement image change

--- a/src/components/MissionStatement.astro
+++ b/src/components/MissionStatement.astro
@@ -8,12 +8,12 @@
 >
     <div class="container max-w-[840px]">
         <img
-            src="../assets/mission-img.png"
-            class="mx-auto mb-5 max-w-xs w-2/4 object-cover"
+            src="../assets/bup-planter-small.webp"
+            class="mx-auto mb-2 max-w-xs w-1/4 object-cover"
         />
 
         <h2
-            class="drop-shadow-regular text-transparent bg-clip-text bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] font-medium text-section-h2 text-center font-medium"
+            class="drop-shadow-regular text-transparent bg-clip-text bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] font-medium text-section-h2 text-center"
         >
             Our Mission
         </h2>
