--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Features from "../components/Features.astro";
 import Pricing from "../components/Pricing";
 import FAQ from "../components/FAQ";
 import Footer from "../components/Footer";
+import Carousel from "../components/Carousel.astro";
 ---
 
 <!-- "@astrojs/image": "^0.3.4", -->
@@ -35,6 +36,7 @@ import Footer from "../components/Footer";
         </div>
         <Ecwid />
     </section>
+    <Carousel />
     <BupVideo />
     <Brands />
     <Features />
