--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -1,22 +1,24 @@
-<section class="py-[150px]">
-    <div class="carousel w-full">
-        <div id="item1" class="carousel-item w-full">
-            <img src="https://placeimg.com/800/200/arch" class="w-full" />
-        </div>
-        <div id="item2" class="carousel-item w-full">
-            <img src="https://placeimg.com/800/200/arch" class="w-full" />
-        </div>
-        <div id="item3" class="carousel-item w-full">
-            <img src="https://placeimg.com/800/200/arch" class="w-full" />
-        </div>
-        <div id="item4" class="carousel-item w-full">
-            <img src="https://placeimg.com/800/200/arch" class="w-full" />
-        </div>
+---
+import Carousel from "./Carousel";
+---
+
+<section class="pt-[150px]">
+    <h2
+        class="drop-shadow-regular text-transparent bg-clip-text bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] font-medium text-section-h2 text-center"
+    >
+        Featured Cards
+    </h2>
+    <div class="carousel w-8/12 mx-auto pb-5">
+        <Carousel />
     </div>
     <div class="flex justify-center w-full py-2 gap-2">
         <a href="#item1" class="btn btn-xs">1</a>
         <a href="#item2" class="btn btn-xs">2</a>
         <a href="#item3" class="btn btn-xs">3</a>
         <a href="#item4" class="btn btn-xs">4</a>
+        <a href="#item5" class="btn btn-xs">5</a>
+        <a href="#item6" class="btn btn-xs">6</a>
+        <a href="#item7" class="btn btn-xs">7</a>
+        <a href="#item8" class="btn btn-xs">8</a>
     </div>
 </section>
