--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,6 +51,46 @@ import Carousel from "../components/Carousel.astro";
         --font-nunito: "Nunito";
     }
 
+    .register-btn {
+        background-image: linear-gradient(
+            to right,
+            rgb(82, 82, 193),
+            rgb(103, 238, 222)
+        );
+        background-size: 175%;
+        transition: background-position 1s ease;
+        background-position: left;
+    }
+
+    .register-btn:hover,
+    .register-btn:focus {
+        background-position: right;
+        transition: background-position 1s ease;
+    }
+
+    .login-btn {
+        background-image: linear-gradient(
+            to right,
+            rgb(82, 82, 193),
+            rgb(103, 238, 222)
+        );
+        background-size: 175%;
+        transition: background-position 1s ease;
+        background-position: left;
+    }
+
+    .login-btn:hover,
+    .login-btn:focus {
+        background-position: right;
+        transition: background-position 1s ease;
+    }
+
+    @media screen and (min-height: 800px) {
+        #hero {
+            padding-top: 100px;
+        }
+    }
+
     .accordian-trigger {
         position: relative;
         background-color: transparent;
