--- a/src/components/Brands.astro
+++ b/src/components/Brands.astro
@@ -2,7 +2,7 @@
 // import { Image } from "@astrojs/image/components";
 ---
 
-<section id="brands" class="max-w-section w-full mx-auto pt-[200px]">
+<section id="brands" class="max-w-[1100px] w-full mx-auto pt-[200px]">
     <h2
         class="text-section-h2 text-transparent bg-clip-text bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] font-quicksand font-medium text-center w-[70%] sm:w-full mx-auto"
     >
