--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -21,4 +21,9 @@ import Carousel from "./Carousel";
         <a href="#item7" class="btn btn-xs">7</a>
         <a href="#item8" class="btn btn-xs">8</a>
     </div>
+    <style>
+        .active {
+            background-color: blue !important;
+        }
+    </style>
 </section>
