--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props as Props;
 	</head>
 	<body>
 		<slot />
-		<label for="my-modal" class="btn modal-button fixed bottom-5 left-5"
+		<!-- <label for="my-modal" class="btn modal-button fixed bottom-5 left-5"
 			><i class="fas fa-envelope text-base"></i>
 		</label>
 
@@ -45,7 +45,7 @@ const { title } = Astro.props as Props;
 					<label for="my-modal" class="btn">Close</label>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- Messenger Chat Plugin Code -->
 		<div id="fb-root"></div>
 
