--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Brands from "../components/Brands.astro";
 import Features from "../components/Features.astro";
 import Pricing from "../components/Pricing";
 import FAQ from "../components/FAQ";
-import Footer from "../components/Footer";
+import Footer from "../components/Footer.astro";
 import Carousel from "../components/Carousel.astro";
 ---
 
