--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 <footer class="mt-[150px] pt-6 flex flex-col gap-y-5 items-center pb-3 justify-center shadow-lg">
    
     <!-- Links -->
-    <div class="flex flex-col md:flex-row items-center gap-x-5 gap-y-2 font-nunito text-sm md:text-base">
+    <div class="flex flex-col md:flex-row items-center gap-x-5 gap-y-2 font-nunito text-sm text-slate-500 md:text-base ">
         <a  href="https://www.bup.bio/buptuts" target="_blank" rel="noreferrer">BŪP TŪTs</a>
         <a  href="https://www.bup.bio/page/terms-of-service" target="_blank" rel="noreferrer">Terms of Service</a>
         <a  href="https://www.bup.bio/page/privacy-policy" target="_blank" rel="noreferrer">Privacy Policy</a>
