--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -99,6 +99,7 @@ const { title } = Astro.props as Props;
 				font-size: var(--font-size-base);
 				color: var(--color-text);
 				background-color: var(--color-bg);
+				overflow-x: hidden;
 			}
 
 			body {
