--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -2,7 +2,7 @@
 import Carousel from "./Carousel";
 ---
 
-<section class="pt-[150px]">
+<section id="mockups" class="pt-[150px]">
     <h2
         class="drop-shadow-regular text-transparent bg-clip-text bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] font-medium text-section-h2 text-center"
     >
