--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -4,7 +4,7 @@
 
 <section
     id="features"
-    class="max-w-section w-full mx-auto tracking-wide py-[120px]"
+    class="max-w-section w-full mx-auto tracking-wide pt-[120px]"
 >
     <h2
         class="text-transparent bg-clip-text bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] font-quicksand text-gradient text-section-h2 text-center font-medium"
@@ -12,126 +12,118 @@
         Check Out our Features
     </h2>
 
-    <div
-        class="feature-wrapper grid grid-cols-1 lg:grid-cols-2 justify-items-center"
+    <article
+        class="my-8 max-w-sm w-11/12 md:max-w-[800px] mx-auto rounded-2xl py-8 px-4"
     >
-        <article
-            class="my-8 max-w-sm w-11/12 md:max-w-[500px] shadow-lg rounded-2xl py-8 px-4"
-        >
-            <div class="article-content flex flex-col items-center gap-y-7">
+        <div class="article-content flex items-center gap-y-7 gap-x-4">
+            <div class="flex flex-col gap-y-4">
                 <h3
-                    class="text-transparent bg-clip-text bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] text-xl sm:text-2xl lg:text-3xl font-quicksand font-medium text-center w-[95vw]"
+                    class="text-3xl leading-normal tracking-wide font-quicksand font-medium"
                 >
                     Get creative <br /> with your links!
                 </h3>
-
-                <div
-                    class="feature-img-container max-w-[120px] md:max-w-[200px]"
-                >
-                    <img
-                        src="../assets/featureImages/bup.png"
-                        alt="bup"
-                        class="w-full object-cover"
-                    />
-                </div>
-                <p
-                    class="font-quicksand text-base text-center leading-relaxed tracking-wide"
-                >
+                <p class="font-nunito text-base leading-relaxed tracking-wide">
                     Bring your links to life using our fun editing tools, block
                     options, fonts, colors and content feeds! Then, make them
                     pop with your favorite custom images.{" "}
                 </p>
             </div>
-        </article>
 
-        <!-- Feature Two -->
-        <article
-            class="my-8 max-w-sm w-11/12 md:max-w-[500px] shadow-lg rounded-2xl py-8 px-4"
-        >
-            <div class="article-content flex flex-col items-center gap-y-7">
+            <img
+                src="../assets/featureImages/bup.png"
+                alt="bup"
+                class="w-full object-cover"
+            />
+        </div>
+    </article>
+
+    <div
+        class="hidden md:block h-5 bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] w-full my-20 skew-y-12"
+    >
+    </div>
+
+    <!-- Feature Two -->
+    <article
+        class="my-8 max-w-sm w-11/12 md:max-w-[800px] mx-auto rounded-2xl py-8 px-4"
+    >
+        <div class="article-content flex items-center gap-y-7 gap-x-8">
+            <img
+                src="../assets/featureImages/bup-streamy-g.png"
+                alt="bup"
+                class="w-full object-cover"
+            />
+            <div class="flex flex-col gap-y-4">
                 <h3
-                    class="text-transparent bg-clip-text bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] text-xl sm:text-2xl lg:text-3xl font-quicksand font-medium text-center w-[95vw]"
+                    class="text-3xl leading-normal tracking-wide font-quicksand font-medium"
                 >
                     BŪP's tools <br /> make links easy!
                 </h3>
-
-                <div
-                    class="feature-img-container max-w-[120px] md:max-w-[200px]"
-                >
-                    <img
-                        src="../assets/featureImages/bup-streamy-g.png"
-                        alt="bup"
-                        class="w-full object-cover"
-                    />
-                </div>
-                <p
-                    class="font-quicksand text-base text-center leading-relaxed tracking-wide"
-                >
+                <p class="font-nunito text-base leading-relaxed tracking-wide">
                     Using our analytics tools, you can keep an eye on audience
                     metrics and page performance. Our shortlink generator makes
                     life easier for your audience by keeping your links simple!
                 </p>
             </div>
-        </article>
+        </div>
+    </article>
 
-        <!-- Feature Three -->
-        <article
-            class="my-8 max-w-sm w-11/12 md:max-w-[500px] shadow-lg rounded-2xl py-8 px-4"
-        >
-            <div class="article-content flex flex-col items-center gap-y-7">
+    <div
+        class="hidden md:block h-5 bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] w-full my-20 -skew-y-12"
+    >
+    </div>
+
+    <!-- Feature Three -->
+    <article
+        class="my-8 max-w-sm w-11/12 md:max-w-[800px] mx-auto rounded-2xl py-8 px-4"
+    >
+        <div class="article-content flex items-center gap-y-7 gap-x-4">
+            <div class="flex flex-col gap-y-4">
                 <h3
-                    class="text-transparent bg-clip-text bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] text-xl sm:text-2xl lg:text-3xl font-quicksand font-medium text-center w-[95vw]"
+                    class="text-3xl leading-normal tracking-wide font-quicksand font-medium"
                 >
                     Create multiple cards & <br /> manage all of your links.
                 </h3>
-
-                <div
-                    class="feature-img-container max-w-[120px] md:max-w-[200px]"
-                >
-                    <img
-                        src="../assets/featureImages/keyp.png"
-                        alt="bup"
-                        class="w-full object-cover"
-                    />
-                </div>
-                <p
-                    class="font-quicksand text-base text-center leading-relaxed tracking-wide"
-                >
+                <p class="font-nunito text-base leading-relaxed tracking-wide">
                     Create multiple cards for your most important links and
                     favorite things while managing it all from a single
                     dashboard.
                 </p>
             </div>
-        </article>
 
-        <!-- Feature Four -->
-        <article
-            class="my-8 max-w-sm w-11/12 md:max-w-[500px] shadow-lg rounded-2xl py-8 px-4"
-        >
-            <div class="article-content flex flex-col items-center gap-y-7">
+            <img
+                src="../assets/featureImages/keyp.png"
+                alt="bup"
+                class="w-full object-cover"
+            />
+        </div>
+    </article>
+
+    <div
+        class="hidden md:block h-5 bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] w-full my-20 skew-y-12"
+    >
+    </div>
+    <!-- Feature Four -->
+    <article
+        class="my-8 max-w-sm w-11/12 md:max-w-[800px] mx-auto rounded-2xl py-8 px-4"
+    >
+        <div class="article-content flex items-center gap-y-7 gap-x-8">
+            <img
+                src="../assets/featureImages/bup-three-little-pugs.png"
+                alt="bup"
+                class="w-full object-cover"
+            />
+            <div class="flex flex-col gap-y-4">
                 <h3
-                    class="text-transparent bg-clip-text bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] text-xl sm:text-2xl lg:text-3xl font-quicksand font-medium text-center w-[95vw]"
+                    class="text-3xl leading-normal tracking-wide font-quicksand font-medium"
                 >
                     Show off your card <br /> with the tap of a BŪP!
                 </h3>
-
-                <div
-                    class="feature-img-container max-w-[120px] md:max-w-[200px]"
-                >
-                    <img
-                        src="../assets/featureImages/bup-three-little-pugs.png"
-                        alt="bup"
-                        class="w-full object-cover"
-                    />
-                </div>
-                <p
-                    class="font-quicksand text-base text-center leading-relaxed tracking-wide"
-                >
+                <p class="font-nunito text-base leading-relaxed tracking-wide">
                     Keep all of your links ready for the world to see with BŪP.
                     Using our Smart Devices, a single tap from a phone can show
                     off your BŪP card to anyone, instantly.
                 </p>
             </div>
-        </article>
-    </div>
+        </div>
+    </article>
 </section>
