--- a/src/components/Brands.astro
+++ b/src/components/Brands.astro
@@ -8,32 +8,43 @@
     >
         Brands That Use BŪP
     </h2>
-    <div
-        class="brand-img-container py-20 grid grid-cols-2 justify-items-center items-center gap-x-5 gap-y-20 lg:grid-cols-3 lg:gap-y-32 lg:gap-x-5"
-    >
-        <img
-            class="w-6/12 md:w-40 object-cover cursor-pointer"
-            src="../assets/brandImages/bwim-logo.webp"
-        />
-        <img
-            class="w-6/12 md:w-40 object-cover cursor-pointer"
-            src="../assets/brandImages/century-21-be3-logo.webp"
-        />
-        <img
-            class="w-6/12 md:w-40 object-cover cursor-pointer"
-            src="../assets/brandImages/century-21-be3.webp"
-        />
-        <img
-            class="w-6/12 md:w-40 object-cover cursor-pointer"
-            src="../assets/brandImages/dwntwn-social.webp"
-        />
-        <img
-            class="w-6/12 md:w-40 object-cover cursor-pointer"
-            src="../assets/brandImages/the-switzer-hych-group-logo.webp"
-        />
-        <img
-            class="w-6/12 md:w-40 object-cover cursor-pointer"
-            src="../assets/brandImages/ut-logo.webp"
-        />
+    <div class="flex flex-col mt-20">
+        <div
+            class="py-20 grid grid-cols-2 justify-items-center items-center gap-x-5 gap-y-20 lg:grid-cols-3 lg:gap-y-32 lg:gap-x-5 border-b-4 border-b-slate-500 border-t-4 border-t-slate-500"
+        >
+            <img
+                class="w-6/12 md:w-40 object-cover cursor-pointer"
+                src="../assets/brandImages/bwim-logo.webp"
+            />
+
+            <img
+                class="w-6/12 md:w-40 object-cover cursor-pointer"
+                src="../assets/brandImages/century-21-be3-logo.webp"
+            />
+
+            <img
+                class="w-6/12 md:w-40 object-cover cursor-pointer"
+                src="../assets/brandImages/century-21-be3.webp"
+            />
+        </div>
+
+        <div
+            class="py-20 grid grid-cols-2 justify-items-center items-center gap-x-5 gap-y-20 lg:grid-cols-3 lg:gap-y-32 lg:gap-x-5 border-b-4 border-b-slate-500"
+        >
+            <img
+                class="w-6/12 md:w-40 object-cover cursor-pointer"
+                src="../assets/brandImages/dwntwn-social.webp"
+            />
+
+            <img
+                class="w-6/12 md:w-40 object-cover cursor-pointer"
+                src="../assets/brandImages/the-switzer-hych-group-logo.webp"
+            />
+
+            <img
+                class="w-6/12 md:w-40 object-cover cursor-pointer"
+                src="../assets/brandImages/ut-logo.webp"
+            />
+        </div>
     </div>
 </section>
