--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -100,6 +100,7 @@ const { title } = Astro.props as Props;
 				color: var(--color-text);
 				background-color: var(--color-bg);
 				overflow-x: hidden;
+				scroll-behavior: smooth;
 			}
 
 			body {
