--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -7,7 +7,7 @@
     class="max-w-section w-full mx-auto tracking-wide pt-[120px]"
 >
     <h2
-        class="text-transparent bg-clip-text bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] font-quicksand text-gradient text-section-h2 text-center font-medium"
+        class="text-transparent bg-clip-text bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] font-quicksand text-gradient text-section-h2 text-center font-medium mx-5"
     >
         Check Out our Features
     </h2>
@@ -15,14 +15,18 @@
     <article
         class="my-8 max-w-sm w-11/12 md:max-w-[800px] mx-auto rounded-2xl py-8 px-4"
     >
-        <div class="article-content flex items-center gap-y-7 gap-x-4">
+        <div
+            class="article-content flex flex-col-reverse md:flex-row items-center gap-y-7 gap-x-4"
+        >
             <div class="flex flex-col gap-y-4">
                 <h3
-                    class="text-3xl leading-normal tracking-wide font-quicksand font-medium"
+                    class="text-2xl md:text-3xl leading-normal tracking-wide font-quicksand font-medium text-center md:text-left"
                 >
                     Get creative <br /> with your links!
                 </h3>
-                <p class="font-nunito text-base leading-relaxed tracking-wide">
+                <p
+                    class="font-nunito text-base leading-relaxed tracking-wide text-center md:text-left"
+                >
                     Bring your links to life using our fun editing tools, block
                     options, fonts, colors and content feeds! Then, make them
                     pop with your favorite custom images.{" "}
@@ -32,7 +36,7 @@
             <img
                 src="../assets/featureImages/bup.png"
                 alt="bup"
-                class="w-full object-cover"
+                class="w-1/2 md:w-full object-cover"
             />
         </div>
     </article>
@@ -46,19 +50,23 @@
     <article
         class="my-8 max-w-sm w-11/12 md:max-w-[800px] mx-auto rounded-2xl py-8 px-4"
     >
-        <div class="article-content flex items-center gap-y-7 gap-x-8">
+        <div
+            class="article-content flex flex-col md:flex-row items-center gap-y-7 gap-x-8"
+        >
             <img
                 src="../assets/featureImages/bup-streamy-g.png"
                 alt="bup"
-                class="w-full object-cover"
+                class="w-1/2 md:w-full object-cover"
             />
             <div class="flex flex-col gap-y-4">
                 <h3
-                    class="text-3xl leading-normal tracking-wide font-quicksand font-medium"
+                    class="text-2xl md:text-3xl leading-normal tracking-wide font-quicksand font-medium text-center md:text-left"
                 >
                     BŪP's tools <br /> make links easy!
                 </h3>
-                <p class="font-nunito text-base leading-relaxed tracking-wide">
+                <p
+                    class="font-nunito text-base leading-relaxed tracking-wide text-center md:text-left"
+                >
                     Using our analytics tools, you can keep an eye on audience
                     metrics and page performance. Our shortlink generator makes
                     life easier for your audience by keeping your links simple!
@@ -76,14 +84,18 @@
     <article
         class="my-8 max-w-sm w-11/12 md:max-w-[800px] mx-auto rounded-2xl py-8 px-4"
     >
-        <div class="article-content flex items-center gap-y-7 gap-x-4">
+        <div
+            class="article-content flex flex-col-reverse md:flex-row items-center gap-y-7 gap-x-4"
+        >
             <div class="flex flex-col gap-y-4">
                 <h3
-                    class="text-3xl leading-normal tracking-wide font-quicksand font-medium"
+                    class="text-2xl md:text-3xl leading-normal tracking-wide font-quicksand font-medium text-center md:text-left"
                 >
                     Create multiple cards & <br /> manage all of your links.
                 </h3>
-                <p class="font-nunito text-base leading-relaxed tracking-wide">
+                <p
+                    class="font-nunito text-base leading-relaxed tracking-wide text-center md:text-left"
+                >
                     Create multiple cards for your most important links and
                     favorite things while managing it all from a single
                     dashboard.
@@ -93,7 +105,7 @@
             <img
                 src="../assets/featureImages/keyp.png"
                 alt="bup"
-                class="w-full object-cover"
+                class="w-1/2 md:w-full object-cover"
             />
         </div>
     </article>
@@ -106,19 +118,23 @@
     <article
         class="my-8 max-w-sm w-11/12 md:max-w-[800px] mx-auto rounded-2xl py-8 px-4"
     >
-        <div class="article-content flex items-center gap-y-7 gap-x-8">
+        <div
+            class="article-content flex flex-col md:flex-row items-center gap-y-7 gap-x-8"
+        >
             <img
                 src="../assets/featureImages/bup-three-little-pugs.png"
                 alt="bup"
-                class="w-full object-cover"
+                class="w-1/2 md:w-full object-cover"
             />
             <div class="flex flex-col gap-y-4">
                 <h3
-                    class="text-3xl leading-normal tracking-wide font-quicksand font-medium"
+                    class="text-2xl md:text-3xl leading-normal tracking-wide font-quicksand font-medium text-center md:text-left"
                 >
                     Show off your card <br /> with the tap of a BŪP!
                 </h3>
-                <p class="font-nunito text-base leading-relaxed tracking-wide">
+                <p
+                    class="font-nunito text-base leading-relaxed tracking-wide text-center md:text-left"
+                >
                     Keep all of your links ready for the world to see with BŪP.
                     Using our Smart Devices, a single tap from a phone can show
                     off your BŪP card to anyone, instantly.
