--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,12 +7,12 @@ import MarqueeComp from "../components/Marquee";
 import MissionStatement from "../components/MissionStatement.astro";
 import Ecwid from "../components/Ecwid.astro";
 import BupVideo from "../components/BupVideo.astro";
-import Brands from "../components/Brands";
+// import Brands from "../components/Brands";
 import Features from "../components/Features.astro";
 import Pricing from "../components/Pricing";
 import FAQ from "../components/FAQ";
 import Footer from "../components/Footer.astro";
-import Carousel from "../components/Carousel.astro";
+// import Carousel from "../components/Carousel.astro";
 import FeaturedCards from "../components/FeaturedCards.astro";
 ---
 
