--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro";
 // import { Image } from "@astrojs/image/components";
 import Header from "../components/Header.astro";
-import MarqueeComp from "../components/Marquee";
+// import MarqueeComp from "../components/Marquee";
 import MissionStatement from "../components/MissionStatement.astro";
 import Ecwid from "../components/Ecwid.astro";
 import BupVideo from "../components/BupVideo.astro";
@@ -22,7 +22,7 @@ import FeaturedCards from "../components/FeaturedCards.astro";
     <!-- Hero -->
     <Header />
     <MissionStatement />
-    <MarqueeComp client:load />
+    <!-- <MarqueeComp client:load /> -->
     <section id="products" class="max-w-section mx-auto pt-[120px]">
         <div class="text-center font-medium flex flex-col gap-y-3">
             <h2
